# faceattendance

./: PROJECT_REPORT.md  app.py  audit_project_schema.py  check_db.py  check_db_v2.py  check_db_v3.py  check_db_v4.py  check_pi.py  db.py  debug_login_users.py  debug_users.py  email_service.py  export_users.py  face_attendance.db  find_user.py  fix_db.py  fix_live_db.py  inspect_db.py  inspect_meetings_cols.py  migrate_id.py  modify_db.py  modify_db_v2.py  reset_db.py  test_database.db  test_db.py  test_db_conn.py  test_fix.py  test_flask.py  test_integration.py  test_queries.sql  test_startup.py  verify_db_update.py  verify_delete_fix.py  verify_integration.py  verify_migration.py  verify_notifications_fix.py  verify_project_capacity.py
frontend_flutter/: all_errors.txt  analysis.txt  errors.txt  errors_admin.txt  errors_emp.txt  errors_final.txt  pubspec.yaml  temp_errors.txt
frontend_flutter/lib/: main.dart  theme.dart
frontend_flutter/lib/models/: attendance.dart  employee.dart  leave.dart  meeting.dart
frontend_flutter/lib/providers/: theme_provider.dart
frontend_flutter/test/: widget_test.dart
rust-face-engine/: Cargo.toml
rust-face-engine/models/: blazeface.onnx  mobilefacenet.onnx
rust-face-engine/src/: main.rs
static/css/: admin.css  dashboard.css  notifications.css  style.css
static/js/: admin.js  admin_analytics.js  dashboard.js  login.js  notifications.js  register.js
templates/: admin_dashboard.html  admin_db.html  admin_employee_profile.html  admin_projects.html  dashboard.html  login.html  register.html
(+5 files in other folders)
