[package]
name = "rust-face-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24"
ndarray = "0.15"
tract-onnx = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
nalgebra = "0.32"
